# TrackletParser

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: configs.py  tracklet_run.py
src/utils/: tracklet.py  tracklet_parser.py
